Added a secondStage for the smtp settings. The settings are now passed to MyProperties. MyProperties is changed to static. The Language Properties are updated with additional text for the smtp settings.

--- a/Mail_It/resources/LangBundle_de_DE.properties
+++ b/Mail_It/resources/LangBundle_de_DE.properties
@@ -1,29 +1,36 @@
-file = "Datei"
-close = "Schliessen"
+file = Datei
+close = Schliessen
 
-edit = "Bearbeiten"
-language = "Sprache..."
-german = "Deutsch"
-french = "Français"
-english = "English"
+edit = Bearbeiten
+language = Sprache...
+german = Deutsch
+french = Français
+english = English
 
-help = "Hilfe"
-about = "Über"
+smtpSettings = SMTP Einstellungen
+username = Benutzername
+password = Passwort
+smtpServer = SMTP Server
+port = Port
+cancel = Abbrechen
 
-from = "Von:"
-fromTip = "Geben Sie eine gültige E-Mail Adresse ein"
-to = "An:"
-toTip = "Geben Sie mindestens eine gültige E-Mail Adresse ein. Sie können mehrere Empfänger eingeben indem Sie diese durch ein Komma trennen."
-subject = "Betreff:"
-subjectTip = "Vergeben Sie einen Betreff/Titel"
+help = Hilfe
+about = Über
 
-priority = "Priorität"
-high = "!! Hoch"
-normal = "! Normal"
-low = "- Niedrieg"
+from = Von:
+fromTip = Geben Sie eine gültige E-Mail Adresse ein
+to = An:
+toTip = Geben Sie mindestens eine gültige E-Mail Adresse ein. Sie können mehrere Empfänger eingeben indem Sie diese durch ein Komma trennen.
+subject = Betreff:
+subjectTip = Vergeben Sie einen Betreff/Titel
 
-logging = "Logging"
+priority = Priorität
+high = !! Hoch
+normal = ! Normal
+low = - Niedrig
 
-msgTip = "Geben Sie hier die Nachricht ein"
+logging = Logging
 
-send = "Senden"
+msgTip = Geben Sie hier die Nachricht ein
+
+send = Senden
