--- a/Mail_It/resources/LangBundle_fr_FR.properties
+++ b/Mail_It/resources/LangBundle_fr_FR.properties
@@ -1,29 +1,36 @@
-file = "Fichier"
-close = "Fermer"
+file = Fichier
+close = Fermer
 
-edit = "Bearbeiten"
-language = "Sprache..."
-german = "Deutsch"
-french = "Français"
-english = "English"
+edit = Modifier
+language = Langue...
+german = Allemand
+french = Français
+english = Anglais
 
-help = "Hilfe"
-about = "Über"
+smtpSettings = Paramètres SMTP
+username = Nom d'utilisateur
+password = Mot de passe
+smtpServer = Serveur SMTP
+port = Port
+cancel = Annuler
 
-from = "Von:"
-fromTip = "Geben Sie eine gültige E-Mail Adresse ein"
-to = "An:"
-toTip = "Geben Sie mindestens eine gültige E-Mail Adresse ein. Sie können mehrere Empfänger eingeben indem Sie diese durch ein Komma trennen."
-subject = "Betreff:"
-subjectTip = "Vergeben Sie einen Betreff/Titel"
+help = Aide
+about = À propos
 
-priority = "Priorität"
-high = "!! Hoch"
-normal = "! Normal"
-low = "- Niedrieg"
+from = De:
+fromTip = Entrez une adresse e-mail valide
+to = À:
+toTip = Entrez au moins une adresse e-mail valide. Vous pouvez aussi bien entrer plusieurs adresses e-mails en les séparant par des virgules.
+subject = Sujet:
+subjectTip = Entrez le sujet de votre e-mail
 
-logging = "Logging"
+priority = Priorité
+high = !! Haute
+normal = ! Normale
+low = - Basse
 
-msgTip = "Geben Sie hier die Nachricht ein"
+logging = Logging
 
-send = "Senden"
+msgTip = Entrez ici votre message
+
+send = Envoyer
